Fixed most of the modules. Better formula prediction